--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
-    "openai": "^5.9.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -46,11 +45,11 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
+    "typescript": "~5.8.3",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
-    "typescript": "~5.8.3"
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~9.2.0"
   },
   "private": true
 }
